fix z-index on Datepicker to be below Navigation bar (z-index:80)

--- a/src/components/UI/InputComponents/Datepicker.module.scss
+++ b/src/components/UI/InputComponents/Datepicker.module.scss
@@ -49,7 +49,7 @@
     background-color: white;
 
     .CalendarContent {
-      z-index: 300;
+      z-index: 50;
 
       &[class~='relative'] {
         position: relative;
